# cpp-member-accessor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ci_pipeline.yml  conan_support.yml
examples/: access_function.cpp  access_member.cpp  multiple_instances.cpp  no_macro.cpp
include/: accessor.hpp
include/accessor/: accessor.hpp
src/: accessor.hpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: accessMemberTestSuite.cpp  callFunctionTestSuite.cpp  functionWrapper.cpp  functionWrapperTestSuite.cpp  main.cpp  memberWrapperTestSuite.cpp  test_helper.hpp
tests/test_utils/: compiler_attributes.hpp
